Z-index fixes

--- a/app/src/sass/components/_context.sass
+++ b/app/src/sass/components/_context.sass
@@ -2,7 +2,7 @@
   position: absolute
   background: transparentize($color-almost-black, 0.10)
   border-radius: 5px
-  z-index: $z-fourth
+  z-index: $z-max
   display: flex
   flex-direction: column
   padding: 5px 0
