--- a/app/src/sass/components/_tooltips.sass
+++ b/app/src/sass/components/_tooltips.sass
@@ -1,6 +1,6 @@
 .tooltip
   width: max-content
-  z-index: $z-second
+  z-index: $z-max
   position: absolute
   padding: 10px 15px
   border-radius: 5px
