--- a/app/src/sass/pages/posts/_profile-popup.sass
+++ b/app/src/sass/pages/posts/_profile-popup.sass
@@ -1,6 +1,6 @@
 .profile-popup
   position: absolute
-  z-index: $z-second
+  z-index: $z-fifth
   display: grid
   grid-gap: 5px 15px
   background-color: transparentize($color-almost-black, 0.10)
